# opencode-go-meter

./: .gitignore  README.md  launch.py  pyproject.toml  requirements.txt  run.bat  run.command  run.sh  setup.bat  setup.command  setup.sh  test_api.py  uninstall.bat  uninstall.command  uninstall.sh
docs/: windows-tray-icon-followup.md
go_meter/: __init__.py  __main__.py  api.py  auth.py  autostart.py  config.py  i18n.py  icon.py  instance.py  tray.py  win_tray.py
tests/: test_parser.py
